# Multi-sensory-Data-Fusion-for-Turtlebot3-Waffle-Pi

./: README.md
Remote_PC/: CMakeLists.txt  package.xml
Remote_PC/launch/: LiDAR_Sonar.launch  LiDAR_Sonar_Camera.launch  NeuralNetworkGenerator.launch  TrainData2csv.launch
Remote_PC/scripts/: NeuralNetwork_Exec_Sonar.py  NeuralNetwork_Generator_FullSensor.py  TrainData3csv.py  TrueData3csv.py
remote_pc/: CMakeLists.txt  package.xml
remote_pc/launch/: TrainData2csv.launch
remote_pc/scripts/: FullData.csv  FullData_SonarFusion.csv
scripts/: ANN_data_fusion10.h5  ANN_full_layout.h5
tb3_server/realsense-ros/realsense2_camera/: CMakeLists.txt
tb3_server/realsense-ros/realsense2_camera/launch/: rs_d435_camera_with_model.launch  rs_d435_camera_with_model.launch.save
tb3_server/realsense-ros/realsense2_description/rviz/: urdf.rviz
tb3_server/ultrasonic/launch/: US.launch  US.launch.save  lidar.launch  turtlebot3_robot.launch
tb3_server/ultrasonic/scripts/: ANN_sonar_fusion2.h5  NeuralNetwork_Exec.py  NeuralNetwork_Generator_Sonar.py  US_L.py  US_R.py  US_R_previous.py  US_R_previous_v2.py
